# melody-bridge

./: .gitignore  README.md  pyproject.toml
src/ytmigrate/: __init__.py  artist_map.py  auth.py  cli.py  matcher.py  melon.py  models.py  uploader.py
tests/: test_artist_map.py  test_matcher.py  test_models.py
