[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melody-bridge"
version = "0.1.0"
description = "Migrate Melon likes and playlists to YouTube Music"
requires-python = ">=3.10"
dependencies = [
    "ytmusicapi>=1.0",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
ytmigrate = "ytmigrate.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
